# Simple-Renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
3rd/glad/include/glad/: glad.h
exp_result/: exp.csv  expDirect.csv  expGbuffer.csv  expGlossy.csv  expSSCT.csv  expSSR.csv  expShadow.csv
libs/linux/: libglfw.so.3.3
resource/model/f1961_33-part_01-laser-ortery_texture-full_resolution-obj_std/: f1961_33-part_01-laser-ortery_texture-master.mtl
resource/shaders/: PCSS.frag  blur.frag  deferred.frag  deferred.vert  direct.frag  gbuffer.frag  genVisibility.frag  hizbuffer.frag  hiztrace.frag  lightDepth.frag  sfragment.frag  ssr.frag  svertex.vert
resource/shaders/SSABSS/: PreCalculation.frag  PreCalculation.geom  PreCalculation.vert  SSSM.frag  SSSM.vert  ShadowCal.frag  ShadowCal.vert  blur1.frag  blur1.vert  blur2.frag  blur2.vert  blur3.frag  blur3.vert
src/: OpenGL_test.cpp  glad.c  main.cpp  vulkan_test.cpp
src/Renderer/: SVulkan.cpp  SVulkan.h
src/Renderer/OpenGL/: SOpenGL.cpp  SOpenGL.h
src/Renderer/Vulkan/: README.md  SVulkan.cpp  SVulkan.h
src/objects/: Cube.hpp  Mesh.hpp  Model.hpp  SLight.hpp  SObject.hpp
src/util/: Camera.cpp  Camera.h  GUI.hpp  Material.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  logger.hpp
